n8n/nginx-accesscontrol-ing.yaml

apiVersion: v1
kind: Service
metadata:
    name: nginx-accesscontrol
spec:
    selector:
      app: nginx-accesscontrol
      tier: backend
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-accesscontrol
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - inter1-accesscontrol.symper.vn
    secretName: symper-tls
  rules:
  - host: inter1-accesscontrol.symper.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: nginx-accesscontrol
             port:
                number: 80
